docs/pss-inventory/retrieved-mdapi/unpackaged/objects/PublicSector__EmergencyRequest__c.object
<CustomObject>
    <fields>
        <fullName>PublicSector__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Emergency Requests</relationshipLabel>
        <relationshipName>Emergency_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublicSector__Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Address</label>
        <referenceTo>Address</referenceTo>
        <relationshipLabel>Emergency Requests</relationshipLabel>
        <relationshipName>Emergency_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublicSector__BusinessApplication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Application</label>
        <referenceTo>BusinessLicenseApplication</referenceTo>
        <relationshipLabel>Emergency Requests</relationshipLabel>
        <relationshipName>Emergency_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublicSector__Contact_Address__c</fullName>
        <label>Contact Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PublicSector__DateRequired__c</fullName>
        <label>Date Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PublicSector__DeliveryInstructions__c</fullName>
        <label>Delivery Instructions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PublicSector__DeliverySafetyConcerns__c</fullName>
        <label>Delivery Health or Safety Concerns</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PublicSector__DisinfectantQuantity__c</fullName>
        <label>Disinfectant Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PublicSector__DropOffDate__c</fullName>
        <label>Drop-Off Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PublicSector__Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PublicSector__FaceShieldsQuantity__c</fullName>
        <label>Face Shields Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PublicSector__GlovesQuantity__c</fullName>
        <label>Gloves Quantity (Surgical or Exam)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PublicSector__GogglesQuantity__c</fullName>
        <label>Safety or Protective Goggles Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PublicSector__GownsQuantity__c</fullName>
        <label>Gowns Quantity(Surgical or Exam)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PublicSector__HandSanitizerQuantity__c</fullName>
        <label>Hand Sanitizer Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PublicSector__IndividualApplication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual Application</label>
        <referenceTo>IndividualApplication</referenceTo>
        <relationshipLabel>Emergency Requests</relationshipLabel>
        <relationshipName>Emergency_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublicSector__IsDropOffDonation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drop-Off Donation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PublicSector__MasksQuantity__c</fullName>
        <label>Masks Quantity (Surgical or Exam)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PublicSector__OrganizationAddress__c</fullName>
        <label>Organization Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicSector__OrganizationName__c</fullName>
        <label>Organization Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicSector__OrganizationType__c</fullName>
        <label>Organization Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acute Psychiatric Hospital (APH)</fullName>
                </value>
                <value>
                    <fullName>Adult Day Health Care (ADHC)</fullName>
                </value>
                <value>
                    <fullName>Ambulatory Surgical Center (ASC)</fullName>
                </value>
                <value>
                    <fullName>Chemical Dependency Recovery Hospital (CDRH)</fullName>
                </value>
                <value>
                    <fullName>Chronic Dialysis Clinic (CDC)</fullName>
                </value>
                <value>
                    <fullName>Congregate Living Health Facility (CLHF)</fullName>
                </value>
                <value>
                    <fullName>End Stage Renal Dialysis (CDC/ESRD)</fullName>
                </value>
                <value>
                    <fullName>General Acute Care Hospital (GACH)</fullName>
                </value>
                <value>
                    <fullName>Home Health Agency (HHA)</fullName>
                </value>
                <value>
                    <fullName>Hospice Facility (HOFA)</fullName>
                </value>
                <value>
                    <fullName>Intermediate Care Facility (ICF)</fullName>
                </value>
                <value>
                    <fullName>Pediatric Day Health &amp; Respite Care Facility (PDHRC)</fullName>
                </value>
                <value>
                    <fullName>Primary Care Clinic (PCC)</fullName>
                </value>
                <value>
                    <fullName>Skilled Nursing Facility (SNF)</fullName>
                </value>
                <value>
                    <fullName>Surgical Clinic (SURGC)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PublicSector__Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PublicSector__PickUpDate__c</fullName>
        <label>Pick-Up Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PublicSector__PrimaryContactName__c</fullName>
        <label>Primary Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicSector__PrimaryContactPhone__c</fullName>
        <label>Primary Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PublicSector__PrimaryContactTitle__c</fullName>
        <label>Primary Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicSector__RequestDetails__c</fullName>
        <label>Request Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PublicSector__RequestReason__c</fullName>
        <label>Request Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Isolated</fullName>
                    <default>true</default>
                    <label>Isolated</label>
                </value>
                <value>
                    <fullName>Quarantined</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
                <value>
                    <fullName>Elderly</fullName>
                </value>
                <value>
                    <fullName>Homeless</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PublicSector__RequestedLengthOfStay__c</fullName>
        <label>Requested Length Of Stay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicSector__RequestedService__c</fullName>
        <label>Requested Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Food Delivery</fullName>
                    <default>true</default>
                    <label>Food Delivery</label>
                </value>
                <value>
                    <fullName>Medicine / Medical Supplies Delivery</fullName>
                </value>
                <value>
                    <fullName>Temporary Housing</fullName>
                </value>
                <value>
                    <fullName>Well-Being Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PublicSector__RequestedStartDateOfStay__c</fullName>
        <label>Requested Start Date Of Stay</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PublicSector__RequestorName__c</fullName>
        <label>Requestor Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicSector__RespiratorN95MaskQuantity__c</fullName>
        <label>Respirator Quantity (N95 Mask)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PublicSector__SecondaryContactName__c</fullName>
        <label>Secondary Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicSector__SecondaryContactPhone__c</fullName>
        <label>Secondary Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PublicSector__SecondaryContactTitle__c</fullName>
        <label>Secondary Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicSector__Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicSector__VentilatorQuantity__c</fullName>
        <label>Ventilator Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PublicSector__ViralSwabsQuantity__c</fullName>
        <label>Viral Swabs Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Emergency Request</label>
    <listViews>
        <fullName>PublicSector__All</fullName>
        <columns>NAME</columns>
        <columns>PublicSector__DeliveryInstructions__c</columns>
        <columns>PublicSector__DeliverySafetyConcerns__c</columns>
        <columns>PublicSector__PrimaryContactName__c</columns>
        <columns>PublicSector__PrimaryContactTitle__c</columns>
        <columns>PublicSector__PrimaryContactPhone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <displayFormat>ER-{0000000}</displayFormat>
        <label>Emergency Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emergency Requests</pluralLabel>
    <recordTypes>
        <fullName>PublicSector__Emergency_Assistance_Request</fullName>
        <active>true</active>
        <label>Emergency Assistance Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>PublicSector__Emergency_Supplies_Donation</fullName>
        <active>true</active>
        <label>Emergency Supplies Donation</label>
    </recordTypes>
    <recordTypes>
        <fullName>PublicSector__Emergency_Supplies_Request</fullName>
        <active>true</active>
        <label>Emergency Supplies Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>